<resources>
    <string name="app_name">tiara-distinctive</string>

    <!-- TITLE -->
    <string name="title">DesaSface</string>

    <!-- DESKRIPSI -->
    <string name="desc">Selamat datang! Silakan login untuk melanjutkan</string>

    <!-- INPUT -->
    <string name="username">Username</string>
    <string name="password">Password</string>

    <!-- BUTTON -->
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="reminder_options">
        <item>5 Menit Sebelum</item>
        <item>10 Menit Sebelum</item>
        <item>30 Menit Sebelum</item>
        <item>1 Jam Sebelum</item>
    </string-array>

</resources>