<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hijau_muda">

    <!-- LOGO -->
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="164dp"
        android:layout_height="169dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/logoapptiara"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- TITLE -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/merriweather_24pt_extrabolditalic"
        android:text="@string/title"
        android:textColor="@color/hijau_dark"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/imgLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- DESC -->
    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/merriweather_24pt_extrabolditalic"
        android:text="@string/desc"
        android:textColor="@color/hijau_text"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- USERNAME -->
    <EditText
        android:id="@+id/inputUsername"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_input"
        android:backgroundTint="@color/putih_soft"
        android:hint="@string/username"
        android:padding="16dp"
        android:textColor="@color/hijau_dark"
        android:textColorHint="@color/hijau_text"
        app:layout_constraintTop_toBottomOf="@id/desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- PASSWORD -->
    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_input"
        android:backgroundTint="@color/putih_soft"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@color/hijau_dark"
        android:textColorHint="@color/hijau_text"
        app:layout_constraintTop_toBottomOf="@id/inputUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- LOGIN BUTTON -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        android:textColor="@color/putih_soft"
        android:textStyle="bold"
        android:backgroundTint="@color/hijau_primary"
        app:layout_constraintTop_toBottomOf="@id/inputPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>